Fixed spacing on resume

--- a/src/styles/resume.styl
+++ b/src/styles/resume.styl
@@ -6,7 +6,7 @@
         height 100%
         width 700px
         background-color #FFFFFF
-        padding 0 25px
+        padding 0 40px
         margin 0 auto
 
         header
